# espcrayon

./: LICENSE  README.md  crayon.yaml
doc/: USAGE.md
esphome/: secrets.tpl.yaml
firmware/: crayon.yaml  secrets.tpl.yaml
src/: crayon.yaml
tools/rainbow_maker/: rainbow.ipynb  requirements.txt
twitch/: .env.template  README.md  pyproject.toml
twitch/exploration/: Colors.ipynb  USAGE.md.j2  colors.py.j2  colors.svg.j2
twitch/src/twitch_crayon/: cli.py  colors.py  crayon.py
